# TinyML

./: .gitignore  DECISION_GUIDE.md  FINAL_STEPS.md  POETRY_MIGRATION.md  PROJECT_CONTEXT.md  Phase_1_TinyML_Foundations.md  README.md  TinyML.ipynb  create_model.py  optimize_model.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/agents/: code-helper.agent.md  deep-explainer.agent.md  orchestrator.agent.md  roadmap-manager.agent.md
.github/prompts/: code-helper.prompt.md  deep-explainer.prompt.md  roadmap-manager.prompt.md
Phase_1/: Phase_1_TinyML_Foundations.md  TinyML.ipynb  optimize_model.py  prepare_data_for_training.py  process_data.py
Phase_1/RowData/: Wave.json
Phase_1/models/: base_model.h5  magic_wand_model.tflite  my_model.h5
Phase_2/: Phase_2_From_Model_to_C.md  STEP2_CONVERT_TO_C.md  convert_tflite_to_c.sh  decode_model_bytes.py  expected_output.npy  magic_wand_model_data.c  magic_wand_model_model_data.c  test_data.h  test_input.csv  test_input.npy  verify_model.py
Phase_3/: CMakeLists.txt  Makefile  Phase_3_TFLite_Micro_Inference.md  REVISION_SUMMARY.md  build.ps1  magic_wand_model_data.h  main.cpp
RowData/: Idle.json
models/: base_model.h5  magic_wand_model.tflite  my_model.h5
